add changes to directory

--- a/88_Merge_Sorted_Array.ipynb
+++ b/88_Merge_Sorted_Array.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 88. Merge Sorted Array\n",
+    "## 88. Merge Sorted Arr\n",
     "\n",
     "You are given two integer arrays nums1 and nums2, sorted in non-decreasing order, and two integers m and n, representing the number of elements in nums1 and nums2 respectively.\n",
     "\n",
