added merge sorted array

--- a/88_Merge_Sorted_Array.ipynb
+++ b/88_Merge_Sorted_Array.ipynb
@@ -49,23 +49,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def merge(nums1: List[int], m: int, nums2: List[int], n: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums1 in-place instead.\n",
+    "        \"\"\"\n",
+    "        # Initialization \n",
+    "        nums1_index = 0\n",
+    "        nums2_index = 0\n",
+    "        swap_position_value_index = m\n",
+    "\n",
+    "        if m == 0:\n",
+    "            nums1 = nums2\n",
+    "        elif n == 0:\n",
+    "            pass\n",
+    "        else:\n",
+    "            for _ in range(0,n):\n",
+    "\n",
+    "                if nums1[nums1_index] <= nums2[nums2_index]:\n",
+    "                    nums1_index = nums1_index + 1\n",
+    "                else:\n",
+    "                    nums1[swap_position_value_index] = nums1[nums1_index]\n",
+    "                    nums1[nums1_index] = nums2[nums2_index]\n",
+    "                    swap_position_value_index = swap_position_value_index + 1\n",
+    "\n",
+    "            \n",
+    "            if (nums2_index != n-1):\n",
+    "                print(\"Im here\")\n",
+    "                # Copy the remaining elements to the nums1 array\n",
+    "                nums1[swap_position_value_index : ] = nums2[nums2_index+1 : ]\n",
+    "\n",
+    "        return nums1, nums2\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5199893401555818)"
+       "([1, 0], [2])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "1/(1+np.exp(-0.08))"
+    "Solution.merge(nums1 = [1, 0],\n",
+    "               m = 1, nums2 = [2], n= 1)\n"
    ]
   },
   {
