--- a/88_Merge_Sorted_Array.ipynb
+++ b/88_Merge_Sorted_Array.ipynb
@@ -58,68 +58,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def merge(nums1: List[int], m: int, nums2: List[int], n: int) -> None:\n",
-    "        \"\"\"\n",
-    "        Do not return anything, modify nums1 in-place instead.\n",
-    "        \"\"\"\n",
-    "        # Initialization \n",
-    "        nums1_index = 0\n",
-    "        nums2_index = 0\n",
-    "        swap_position_value_index = m\n",
+    "  def merge( nums1: list[int], m: int, nums2: list[int], n: int) -> None:\n",
+    "    i = m - 1  \n",
+    "    j = n - 1  \n",
+    "    k = m + n - 1 \n",
     "\n",
-    "        if m == 0:\n",
-    "            nums1 = nums2\n",
-    "        elif n == 0:\n",
-    "            pass\n",
-    "        else:\n",
-    "            for _ in range(0,n):\n",
+    "    while j >= 0:\n",
+    "      if i >= 0 and nums1[i] > nums2[j]:\n",
+    "        nums1[k] = nums1[i]\n",
+    "        k -= 1\n",
+    "        i -= 1\n",
+    "      else:\n",
+    "        nums1[k] = nums2[j]\n",
+    "        k -= 1\n",
+    "        j -= 1\n",
     "\n",
-    "                if nums1[nums1_index] <= nums2[nums2_index]:\n",
-    "                    nums1_index = nums1_index + 1\n",
-    "                else:\n",
-    "                    nums1[swap_position_value_index] = nums1[nums1_index]\n",
-    "                    nums1[nums1_index] = nums2[nums2_index]\n",
-    "                    swap_position_value_index = swap_position_value_index + 1\n",
     "\n",
-    "            \n",
-    "            if (nums2_index != n-1):\n",
-    "                print(\"Im here\")\n",
-    "                # Copy the remaining elements to the nums1 array\n",
-    "                nums1[swap_position_value_index : ] = nums2[nums2_index+1 : ]\n",
-    "\n",
-    "        return nums1, nums2\n",
-    "        "
+    "    return nums1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([1, 0], [2])"
+       "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution.merge(nums1 = [1, 0],\n",
-    "               m = 1, nums2 = [2], n= 1)\n"
+    "Solution.merge(nums1 = [1,2,4,5,6,0],\n",
+    "               m = 5, nums2 = [3], n= 1)\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
