--- a/121_Best_Time_To_Buy_Stock_And_Sell.ipynb
+++ b/121_Best_Time_To_Buy_Stock_And_Sell.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,58 @@
        "5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Solution().maxProfit(prices = [7,1,5,3,6,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Another Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        buy_price = prices[0]\n",
+    "        profit = 0\n",
+    "        for sell_price in prices:\n",
+    "            if buy_price > sell_price:\n",
+    "                buy_price = sell_price\n",
+    "\n",
+    "            profit = max(profit, sell_price - buy_price)\n",
+    "\n",
+    "        return profit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 1:0\n",
+      "Test Case 1:5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Test Case 1:{Solution().maxProfit(prices = [7,6,4,3,1])}\")\n",
+    "print(f\"Test Case 1:{Solution().maxProfit(prices = [7,1,5,3,6,4])}\")"
    ]
   },
   {
